apps/teamarr/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: teamarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: teamarr
    spec:
      nodeSelector:
        kubernetes.io/arch: "arm64"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: teamarr
          image: ghcr.io/egyptiangio/teamarr:main@sha256:f72771184704a2ba912097d20c3bd2c23762c79b925104cdcac11b09a49945d4
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 150m
              memory: 128Mi
          ports:
            - containerPort: 9195
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: teamarr-data
        - name: tmp
          emptyDir: {}
